// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationContext Should not crash 1`] = `
<Grommet
  full={true}
>
  <GlobalStyleComponent />
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</Grommet>
`;

exports[`NotificationContext Should render a default popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 cfjZVQ"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 laewRq"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dIuKjY"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dJvscV"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 cutvkF"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 epAThu"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 cfjZVQ"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 laewRq"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 dIuKjY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dJvscV"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 cutvkF"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 epAThu"
          />
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a error popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 cfjZVQ"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 laewRq"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dIuKjY"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dJvscV"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 knbKGX"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 epAThu"
              >
                <button
                  class="StyledButton-sc-323bzc-0 Lzzoo"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 cfjZVQ"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 laewRq"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 dIuKjY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dJvscV"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 knbKGX"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 epAThu"
          >
            <button
              className="StyledButton-sc-323bzc-0 Lzzoo"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a success popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 cfjZVQ"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 laewRq"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dIuKjY"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dJvscV"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 jXJQdf"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 epAThu"
              >
                <button
                  class="StyledButton-sc-323bzc-0 Lzzoo"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 cfjZVQ"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 laewRq"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 dIuKjY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dJvscV"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 jXJQdf"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 epAThu"
          >
            <button
              className="StyledButton-sc-323bzc-0 Lzzoo"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a warning popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 cfjZVQ"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 laewRq"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dIuKjY"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dJvscV"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 cTVBxu"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 epAThu"
              >
                <button
                  class="StyledButton-sc-323bzc-0 Lzzoo"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 cfjZVQ"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 laewRq"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 dIuKjY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dJvscV"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 cTVBxu"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 epAThu"
          >
            <button
              className="StyledButton-sc-323bzc-0 Lzzoo"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should set the proper label for the confirm button 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 cfjZVQ"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 laewRq"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dIuKjY"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dJvscV"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 cutvkF"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 epAThu"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 cfjZVQ"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 cUkxUS"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 laewRq"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 dIuKjY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dJvscV"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 cutvkF"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 epAThu"
          />
        </div>
      </div>
    </div>
  </div>
</Portal>
`;
